# HeartRateMonitor

./: .gitignore  CMakeLists.txt  README.md
HeartRateMonitor/: .gitignore  AndroidManifest.xml
apk_output/: HeartRateMonitor-debug.apk
apps/: CMakeLists.txt
apps/HeartRateMonitor/: CMakeLists.txt
apps/HeartRateMonitor/cpp/: HeartRateMonitorPreview.cpp  ImageViewFrameDrawer.cpp  ImageViewFrameDrawer.h  ImageViewHeartRateVisualizer.cpp  ImageViewHeartRateVisualizer.h  ImageViewImageDrawer.cpp  ImageViewImageDrawer.h
apps/HeartRateMonitor/java/: AndroidManifest.xml
apps/HeartRateMonitor/java/res/layout/: main.xml
apps/HeartRateMonitor/java/src/com/shnayder/heartratemonitor/: HeartRateMonitor.java  HeartRateMonitorPreview.java
apps/HeartRateMonitor_MinGW/: CMakeLists.txt
apps/HeartRateMonitor_MinGW/src/: main.cpp
apps/fftw_test_app/: CMakeLists.txt
apps/fftw_test_app/src/: main.cpp
apps/heart_rate_monitor_test/: CMakeLists.txt
apps/heart_rate_monitor_test/src/: config.lua  main.cpp
cmake/: Android.cmake  FindAndroidBoost.cmake
modules/: CMakeLists.txt
modules/HeartRateLibrary/: CMakeLists.txt
modules/HeartRateLibrary/android_cpp/src/: HeartRate.cpp  HeartRate.h  HeartRate_test.cpp
modules/HeartRateLibrary/android_java/: AndroidManifest.xml
modules/HeartRateLibrary/android_java/src/com/shnaider/heartrate/: HeartRate.java  IHeartRateCameraOutput.java
modules/libframe/: CMakeLists.txt
modules/libframe/include/: RGBFrameSource.h
modules/libframe/src/: RGBFrameSource.cpp
modules/libheartbeatrate/: Android.mk  CMakeLists.txt
modules/libheartbeatrate/include/: AndroidLog.h  FrameTypes.h  HeartBeatRateDefines.h  HeartBeatRateTypes.h  HeartRateCounter.h  HeartRateProcessor.h  HeartRateTools.h  IFrameSource.h  IHeartRateGenerator.h  IHeartRateNumber.h  IHeartRateVisualizer.h  IImageDrawer.h  IImageSource.h  ILog.h  INV21FrameSource.h  IRGBFrameSource.h  IRGBImageDrawer.h  ImageFormat.h  ImageViewHeartRateVisualizer.h  ImageViewImageDrawer.h  LinuxLog.h  NV21FrameSource.h  RGBFrameSource.h  RGBHeartRateGenerator.h  SimpleHeartRateGenerator.h  SimpleHeartRateNumber.h  SimpleHeartRateVisualizer.h  Types.h
modules/libheartbeatrate/include/heartratemonitor/: HeartBeatRateTypes.h  HeartRateTools.h  IHeartRateGenerator.h  IHeartRateVisualizer.h  ILog.h  IRGBFrameDrawer.h  IRGBFrameSource.h  IRGBImageDrawer.h  RGB2PNGDataBaseFrameDrawer.h  RGBHeartRateGenerator.h  SimpleHeartRateGenerator.h  SimpleHeartRateVisualizer.h
modules/libheartbeatrate/include/heartratemonitor/dummys/: DummyNV21FrameSource.h  DummyRGBFrameSource.h
modules/libheartbeatrate/src/: AndroidLog.cpp  HeartBeatRateTypes.cpp  HeartRateCounter.cpp  HeartRateProcessor.cpp  HeartRateTools.cpp  ImageViewHeartRateVisualizer.cpp  ImageViewImageDrawer.cpp  LinuxLog.cpp  NV21FrameSource.cpp  RGB2PNGDataBaseFrameDrawer.cpp  RGBFrameSource.cpp  RGBHeartRateGenerator.cpp  SimpleHeartRateGenerator.cpp  SimpleHeartRateVisualizer.cpp
modules/libheartbeatrate/src/dummys/: DummyNV21FrameSource.cpp  DummyRGBFrameSource.cpp  SimpleHeartRateVisualizer.cpp
modules/libheartbeatrate/src/log/: AndroidLog.cpp
modules/libheartrate/: CMakeLists.txt
modules/libheartrate/include/HeartRate/: HeartBeatRateTypes.h  HeartRate.h  HeartRateCommon.h  HeartRateCounter.h  HeartRateTools.h  IHeartRateFrequencyVisualizer.h  IHeartRateGenerator.h  IHeartRateNumber.h  IHeartRateRecognizer.h  IHeartRateVisualizer.h  INV21FrameSource.h  IRGBFrameDrawer.h  IRGBFrameSource.h  IRGBImageDrawer.h  NV21FrameSource.h  PNGDataBase2RGBFrameSource.h  RGB2PNGDataBaseFrameDrawer.h  RGBFrameSource.h  RGBHeartRateGenerator.h
modules/libheartrate/include/HeartRate/mocks/: MockHeartRateFrequencyVisualizer.h  MockHeartRateNumber.h  MockHeartRateVisualizer.h  MockNV21FrameSource.h  MockRGBFrameSource.h
modules/libheartrate/include/HeartRate/types/: Exception.h  Types.h
modules/libheartrate/include/heartrate/: FFTWHeartRateRecognizer.h  HeartBeatRateTypes.h  HeartRate.h  HeartRateCommon.h  HeartRateCounter.h  HeartRateExceptions.h  HeartRateTools.h  IHeartRateFrequencyVisualizer.h  IHeartRateGenerator.h  IHeartRateNumber.h  IHeartRateRecognizer.h  IHeartRateVisualizer.h  ILog.h  INV21FrameSource.h  IRGBFrameDrawer.h  IRGBFrameSource.h  Log.h  NV21FrameSource.h  RGB2PNGDataBaseFrameDrawer.h  RGBFrameSource.h  RGBHeartRateGenerator.h
modules/libheartrate/include/heartrate/dummys/: DummyNV21FrameSource.h  DummyRGBFrameSource.h  SimpleHeartRateGenerator.h  SimpleHeartRateNumber.h  SimpleHeartRateVisualizer.h
modules/libheartrate/include/heartrate/mocks/: MockHeartRateFrequencyVisualizer.h  MockHeartRateGenerator.h  MockHeartRateNumber.h  MockHeartRateRecognizer.h  MockHeartRateVisualizer.h  MockRGBFrameSource.h
modules/libheartrate/include/heartrate/types/: Exception.h  Image.h  Types.h
modules/libheartrate/include/heartratemonitor/: HeartBeatRateTypes.h  HeartRateCounter.h  HeartRateExceptions.h  HeartRateTools.h  IHeartRateNumber.h  INV21FrameSource.h  IRGBImageDrawer.h  RGBHeartRateGenerator.h
modules/libheartrate/include/heartratemonitor/dummys/: SimpleHeartRateGenerator.h  SimpleHeartRateNumber.h  SimpleHeartRateVisualizer.h
modules/libheartrate/src/: FFTWHeartRateRecognizer.cpp  HeartBeatRateTypes.cpp  HeartRate.cpp  HeartRateCounter.cpp  HeartRateTools.cpp  NV21FrameSource.cpp  PNGDataBase2RGBFrameSource.cpp  RGB2PNGDataBaseFrameDrawer.cpp  RGBFrameSource.cpp  RGBHeartRateGenerator.cpp  Types.cpp
modules/libheartrate/src/dummys/: DummyNV21FrameSource.cpp  DummyRGBFrameSource.cpp  SimpleHeartRateGenerator.cpp  SimpleHeartRateVisualizer.cpp
modules/libheartrate/src/log/: AndroidLog.cpp  AndroidLog.h  LinuxLog.cpp  LinuxLog.h  Log.cpp
modules/libheartrate/src/mocks/: MockHeartRateFrequencyVisualizer.cpp  MockHeartRateGenerator.cpp  MockHeartRateRecognizer.cpp  MockHeartRateVisualizer.cpp  MockNV21FrameSource.cpp  MockRGBFrameSource.cpp
modules/libheartrate/tests/: Image_test.cpp
scripts/: cmake_for_android.sh  deploy.sh  install_boost.sh  (+2 more)
testing/frame_test/: CMakeLists.txt
testing/frame_test/src/: main.cpp
(+29 files in other folders)
